# novel-writer-master

./: .gitignore  README.md  config.example.yaml  pyproject.toml
data/: anti_slop_zh.json
src/novel_craft/: __init__.py  config.py  db.py
src/novel_craft/core/: __init__.py  events.py  module.py
src/novel_craft/llm/: __init__.py  client.py  router.py
src/novel_craft/llm/prompts/: summarize_chapter.j2
src/novel_craft/models/: __init__.py  novel.py
src/novel_craft/modules/: __init__.py
src/novel_craft/modules/anti_slop/: __init__.py  analyzer.py  dictionary.py  rewriter.py  scorer.py  ui.py
src/novel_craft/modules/bible/: __init__.py  service.py  ui.py
src/novel_craft/modules/consistency/: __init__.py  service.py  ui.py
src/novel_craft/modules/dashboard/: __init__.py  ui.py
src/novel_craft/modules/export/: __init__.py  service.py  ui.py
src/novel_craft/modules/generation/: __init__.py  service.py  ui.py
src/novel_craft/modules/outline/: __init__.py  service.py  ui.py
src/novel_craft/modules/project/: __init__.py  service.py  ui.py
src/novel_craft/modules/settings/: __init__.py  ui.py
src/novel_craft/ui/: app.py
src/novel_writer/: __init__.py  config.py  db.py
src/novel_writer/core/: __init__.py  module.py
src/novel_writer/llm/: __init__.py  client.py  router.py
src/novel_writer/llm/prompts/: anti_slop_rules.j2  check_consistency.j2  generate_scene.j2
src/novel_writer/models/: __init__.py  novel.py
src/novel_writer/modules/anti_slop/: __init__.py  rewriter.py  scorer.py  ui.py
src/novel_writer/ui/: __init__.py  app.py
(+24 files in other folders)
